.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:26:24 **** Incremental Build of configuration Debug for project modeloPrueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'utn_getNumero':
..\src\utn.c:26:4: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
    printf("%s", mensaje);
    ^~~~~~
..\src\utn.c:26:4: warning: incompatible implicit declaration of built-in function 'printf'
..\src\utn.c:26:4: note: include '<stdio.h>' or provide a declaration of 'printf'
..\src\utn.c:27:4: warning: implicit declaration of function 'fflush' [-Wimplicit-function-declaration]
    fflush(stdin);
    ^~~~~~
..\src\utn.c:27:11: error: 'stdin' undeclared (first use in this function)
    fflush(stdin);
           ^~~~~
..\src\utn.c:27:11: note: each undeclared identifier is reported only once for each function it appears in
..\src\utn.c:28:4: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
    scanf("%d", &auxiliar);
    ^~~~~
..\src\utn.c:28:4: warning: incompatible implicit declaration of built-in function 'scanf'
..\src\utn.c:28:4: note: include '<stdio.h>' or provide a declaration of 'scanf'
..\src\utn.c: In function 'utn_getFloat':
..\src\utn.c:54:4: warning: incompatible implicit declaration of built-in function 'printf'
    printf("%s", mensaje);
    ^~~~~~
..\src\utn.c:54:4: note: include '<stdio.h>' or provide a declaration of 'printf'
..\src\utn.c:55:11: error: 'stdin' undeclared (first use in this function)
    fflush(stdin);
           ^~~~~
..\src\utn.c:56:4: warning: incompatible implicit declaration of built-in function 'scanf'
    scanf("%f", &auxiliar);
    ^~~~~
..\src\utn.c:56:4: note: include '<stdio.h>' or provide a declaration of 'scanf'
..\src\utn.c: In function 'mostrarMenu':
..\src\utn.c:77:2: warning: incompatible implicit declaration of built-in function 'printf'
  printf(" \n          MENÚ ABM ");
  ^~~~~~
..\src\utn.c:77:2: note: include '<stdio.h>' or provide a declaration of 'printf'
